--- a/src/components/page-blocks/orderform.scss
+++ b/src/components/page-blocks/orderform.scss
@@ -391,7 +391,7 @@
                     left: 80px;
 
                     @include breakpoints(x-small, small) {
-                        left: 25%;
+                        left: 15%;
                     }
                 }
             }
