--- a/src/components/page-blocks/slider.scss
+++ b/src/components/page-blocks/slider.scss
@@ -74,6 +74,10 @@
         @include breakpoints(x-small, small) {
             width: 100%;
         }
+
+        @include breakpoints(x-small, large) {
+            margin-right: 0;
+        }
     }
 
     &__order {
